# lora-module-updater

./: .gitmodules  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
module-updater/: Cargo.toml
module-updater/src/: gateway.rs  main.rs
soil-sensor-reader/: Cargo.toml  config.json  moisture_log.csv
soil-sensor-reader/src/: main.rs  weather.rs
