[package]
name = "soil-sensor-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gateway-host-schema = { path = "../lora-module-fw/gateway-host-schema" }
serde = { version = "1.0", features = ["derive"], optional = true }
postcard = { version = "1.0.8" }
clap = { version = "4.4.11", features = ["derive"] }
serialport = { version = "4.3.0" }
anyhow = { version = "1.0.44" }
thiserror = { version = "1.0.52" }
chrono = { version = "0.4.38" }